5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4061/executions/1760_1580.log
== TEST (2019-05-28 23:57:58) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i = size(vetor1)):
	if(vetor1[i] == (-1)):
		conf = conf + 1
		if(vetor1[i] >= 6):
			conap = conap + 1
			if(vetor1[i] > -1 and vetor1[i] < 6):
				conre = 1 + conre
				if(vetor1[i] != -1):
					pres = pres + 1
					soma = soma + vetor1[i]
					if(vetor1[i] > maior):
						maior = vetor1[i]
						pos = i
						i = i + 1
						media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
File "XXXX", line 16
    while(i = size(vetor1)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 23:58:48) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i = size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
		if(vetor1[i] >= 6):
			conap = conap + 1
			if(vetor1[i] > -1 and vetor1[i] < 6):
				conre = 1 + conre
				if(vetor1[i] != -1):
					pres = pres + 1
					soma = soma + vetor1[i]
					if(vetor1[i] > maior):
						maior = vetor1[i]
						pos = i
						i = i + 1
						media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
File "XXXX", line 16
    while(i = size(vetor1)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:01:01) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
		if(vetor1[i] >= 6):
			conap = conap + 1
			if(vetor1[i] > -1 and vetor1[i] < 6):
				conre = 1 + conre
				if(vetor1[i] != -1):
					pres = pres + 1
					soma = soma + vetor1[i]
					if(vetor1[i] > maior):
						maior = vetor1[i]
						pos = i
						i = i + 1
						media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:09:33) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
		if(vetor1[i] >= 6):
			conap = conap + 1
			if(vetor1[i] > -1 and vetor1[i] < 6):
				conre = 1 + conre
				if(vetor1[i] != -1):
					pres = pres + 1
					soma = soma + vetor1[i]
					if(vetor1[i] > maior):
						maior = vetor1[i]
						pos = i
						i = i + 1
						media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:14:54) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
	if(vetor1[i] >= 6):
		conap = conap + 1
	if(vetor1[i] > -1 and vetor1[i] < 6):
		conre = 1 + conre
	if(vetor1[i] != -1):
		pres = pres + 1
		soma = soma + vetor1[i]
	if(vetor1[i] > maior):
		maior = vetor1[i]
		pos = i
		i = i + 1
		media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:16:35) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
	if(vetor1[i] >= 6):
		conap = conap + 1
	if(vetor1[i] > -1 and vetor1[i] < 6):
		conre = 1 + conre
	if(vetor1[i] != -1):
		pres = pres + 1
		soma = soma + vetor1[i]
	if(vetor1[i] > maior):
		maior = vetor1[i]
		pos = i
	i = i + 1
	media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:17:45) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
	if(vetor1[i] >= 6):
		conap = conap + 1
	if(vetor1[i] > -1 and vetor1[i] < 6):
		conre = 1 + conre
	if(vetor1[i] != -1):
		pres = pres + 1
		soma = soma + vetor1[i]
	if(vetor1[i] > maior):
		maior = vetor1[i]
		pos = i
	i = i + 1
	media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 00:19:21) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
	if(vetor1[i] >= 6):
		conap = conap + 1
	if(vetor1[i] > -1 and vetor1[i] < 6):
		conre = 1 + conre
	if(vetor1[i] != -1):
		pres = pres + 1
		soma = soma + vetor1[i]
	if(vetor1[i] > maior):
		maior = vetor1[i]
		pos = i
	i = i + 1

media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 00:20:23) 
-- CODE:
from numpy import *
vetor1 =array(eval(input("digite vetor1: ")))
vetor2 =array(eval(input("digite vetor2: ")))

i = 0
conf = 0
conap = 0
conre = 0
comax = 0

soma = 0
pres = 0
maior = 0
pos = 0

while(i < size(vetor1)):
	if(vetor1[i] == -1):
		conf = conf + 1
	if(vetor1[i] >= 6):
		conap = conap + 1
	if(vetor1[i] > -1 and vetor1[i] < 6):
		conre = 1 + conre
	if(vetor1[i] != -1):
		pres = pres + 1
		soma = soma + vetor1[i]
	if(vetor1[i] > maior):
		maior = vetor1[i]
		pos = i
	i = i + 1

media = soma/pres
print(conf)
print(conap)
print(conre)
print(round(media, 2))
print(vetor2[pos])
-- EXECUTION TIME:
0.435988
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
